--- a/index.html
+++ b/index.html
@@ -275,8 +275,176 @@
                     </div>
                 </div>
             </section>
+            <section class="popular-product">
+                <div class="popular-product__container">
+                    <h2 class="popular-product__title">Популярные товары</h2>
+                        <nav class="popular-product__menu">
+                            <ul class="popular-product__list">
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">запчасти</button>
+                                </li>
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">моторы</button>
+                                </li>
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">шины</button>
+                                </li>
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">электроника</button>
+                                </li>
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">инструменты</button>
+                                </li>
+                                <li class="popular-product__item">
+                                    <button class="popular-product__btn">аксессуары</button>
+                                </li>
+                            </ul>
+                       </nav>
+                       <div class="popular-product-card">   
+                            <div class="card">
+                                <img class="card__icon-favorites" src="img/popular-product/favorite.svg" alt="">
+                                <img class="card__img" src="img/popular-product/ruk.svg" alt="">
+                                <h3 class="card__title">
+                                    Водонепроницаемый Рюкзак
+                                </h3>
+                                <p class="card-price">9 800 ₽</p>
+                                <div class="card__car">
+                                    <img class="card__icon-card" src="img/popular-product/car-popular.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card__icon-favorites" src="img/popular-product/favorite.svg" alt="">
+                                <img class="card__img" src="img/popular-product/ruk.svg" alt="">
+                                <h3 class="card__title">
+                                    Водонепроницаемый Рюкзак
+                                </h3>
+                                <p class="card-price">9 800 ₽</p>
+                                <div class="card__car">
+                                    <img class="card__icon-card" src="img/popular-product/car-popular.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card__icon-favorites" src="img/popular-product/favorite.svg" alt="">
+                                <img class="card__img" src="img/popular-product/ruk.svg" alt="">
+                                <h3 class="card__title">
+                                    Водонепроницаемый Рюкзак
+                                </h3>
+                                <p class="card-price">9 800 ₽</p>
+                                <div class="card__car">
+                                    <img class="card__icon-card" src="img/popular-product/car-popular.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card__icon-favorites" src="img/popular-product/favorite.svg" alt="">
+                                <img class="card__img" src="img/popular-product/ruk.svg" alt="">
+                                <h3 class="card__title">
+                                    Водонепроницаемый Рюкзак
+                                </h3>
+                                <p class="card-price">9 800 ₽</p>
+                                <div class="card__car">
+                                    <img class="card__icon-card" src="img/popular-product/car-popular.svg" alt="">
+                                </div>
+                            </div>
+                       </div>
+                       <div class="popular-poduct-btn">
+                        <a href="#">Показать еще</a>
+                    </div>
+                </div>
+            </section>
+            <section class="buy-with-product">
+                <div class="buy-with-product__container">
+                    <h2 class="buy-with-product__title">
+                        С этим товаром покупают
+                    </h2>
+                    <nav class="buy-with-product__menu">
+                        <ul class="buy-with-product__list">
+                            <li>
+                                <button class="buy-with-product__item">запчасти</button>
+                            </li>
+                            <li>
+                                <button class="buy-with-product__item">моторы</button>
+                            </li>
+                            <li>
+                                <button class="buy-with-product__item">шины</button>
+                            </li>
+                            <li>
+                                <button class="buy-with-product__item">электроника</button>
+                            </li>
+                            <li>
+                                <button class="buy-with-product__item">инструменты</button>
+                            </li>
+                            <li>
+                                <button class="buy-with-product__item">аксессуары</button>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="buy-with-product__card-list">
+                        <div class="buy-with-product-card">
+                            <div class="buy-with-product-card__sale sale">
+                                <p>sale</p>
+                            </div>
+                            <a class="buy-with-product-card__favorite" href="">
+                                <img class="buy-with-product-card__favorite-ircon" src="img/buy-with-product/favorite.svg" alt="favorite">
+                            </a>
+                            <img class="buy-with-product-card__img-product" src="img/buy-with-product/2178888 1.svg" alt="">
+                            <h3 class="buy-with-product-card__title">Garmin Echomap Plus 62cv</h3>
+                            <p class="buy-with-product-card__price">45 800 ₽</p>
+                            <a class="buy-with-product-card__cart" href="#">
+                                <img class="buy-with-product-card__cart-icon" src="img/buy-with-product/cart.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="buy-with-product-card">
+                            <div class="buy-with-product-card__sale sale">
+                                <p>sale</p>
+                            </div>
+                            <a class="buy-with-product-card__favorite" href="">
+                                <img class="buy-with-product-card__favorite-ircon" src="img/buy-with-product/favorite.svg" alt="favorite">
+                            </a>
+                            <img class="buy-with-product-card__img-product" src="img/buy-with-product/2178888 1.svg" alt="">
+                            <h3 class="buy-with-product-card__title">Garmin Echomap Plus 62cv</h3>
+                            <p class="buy-with-product-card__price">45 800 ₽</p>
+                            <a class="buy-with-product-card__cart" href="#">
+                                <img class="buy-with-product-card__cart-icon" src="img/buy-with-product/cart.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="buy-with-product-card">
+                            <div class="buy-with-product-card__sale sale">
+                                <p>sale</p>
+                            </div>
+                            <a class="buy-with-product-card__favorite" href="">
+                                <img class="buy-with-product-card__favorite-ircon" src="img/buy-with-product/favorite.svg" alt="favorite">
+                            </a>
+                            <img class="buy-with-product-card__img-product" src="img/buy-with-product/2178888 1.svg" alt="">
+                            <h3 class="buy-with-product-card__title">Garmin Echomap Plus 62cv</h3>
+                            <p class="buy-with-product-card__price">45 800 ₽</p>
+                            <a class="buy-with-product-card__cart" href="#">
+                                <img class="buy-with-product-card__cart-icon" src="img/buy-with-product/cart.svg" alt="">
+                            </a>
+                        </div>
+                        <div class="buy-with-product-card">
+                            <div class="buy-with-product-card__sale sale">
+                                <p>sale</p>
+                            </div>
+                            <a class="buy-with-product-card__favorite" href="">
+                                <img class="buy-with-product-card__favorite-ircon" src="img/buy-with-product/favorite.svg" alt="favorite">
+                            </a>
+                            <img class="buy-with-product-card__img-product" src="img/buy-with-product/2178888 1.svg" alt="">
+                            <h3 class="buy-with-product-card__title">Garmin Echomap Plus 62cv</h3>
+                            <p class="buy-with-product-card__price">45 800 ₽</p>
+                            <a class="buy-with-product-card__cart" href="#">
+                                <img class="buy-with-product-card__cart-icon" src="img/buy-with-product/cart.svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
+            <div class="footer__background">
+                <div class="footer__container">
+                    
+                </div>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
